--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
 
+html
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Обо мне</title>
+    <link rel="stylesheet" href="style.css">
+ 
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#about">Обо мне</a></li>
+                <li><a href="#skills">Навыки</a></li>
+                <li><a href="#contacts">Контакты</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="hero">
+            <div class="container">
+ 
+                <h1>Привет, я Матвей</h1>
+                <p>Начинающий веб-разработчик</p>
+            </div>
+        </section>
+
+        <section id="about">
+            <div class="container">
+                <h2>Обо мне</h2>
+                <p>Я увлекаюсь созданием сайтов и изучаю веб-технологии. Люблю решать интересные задачи и постоянно учиться чему-то новому. В свободное время читаю книги и экспериментирую с кодом.</p>
+            </div>
+        </section>
+
+        <section id="skills">
+            <div class="container">
+                <h2>Мои навыки</h2>
+                <ul class="skills-list">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Git</li>
+                </ul>
+            </div>
+        </section>
+
+   
+    </main>
+
+   
+</body>
+</html>
